taco-log/src/css/logTaco.css
.log-taco-container{
    width: 100%;

}
.taco-form{
    display: flex;
    justify-content: center;
    flex: 1;
    flex-wrap: wrap;
    width: 100%
}
.quadrant:nth-child(2n) {
    flex-basis : 100%;
    border: solid black;
}
.taco-form .name-container {
    max-width: 50%;
}
.taco-form .search-map-container {
    max-width: 50%;
    border: solid black;
}
.location-information{
    display: flex;
    flex-flow: row;
    justify-content: flex-start;
    flex: 1;
}
.location-image-wrap{
    max-width: 120px;
    height: 120px;
}
.location-photo{
    display: block;
    max-width: 100%;
    max-height: 100%;
}
.google-dropdown{
    width: 100%;
}
.taco-form .ingredient-container {
    max-width: 50%;
}
.taco-form .special-experience-container {
    max-width: 50%;
}

@media only screen and (max-width: 860px) {
    .taco-form{
        flex-flow: column;
    }
  } 

